--- a/publication1.ipynb
+++ b/publication1.ipynb
@@ -261,7 +261,7 @@
     "        '''\n",
     "        messages = [\n",
     "            {\"role\": \"system\", \"content\": prompt},\n",
-    "            {\"role\": \"user\", \"content\": f\"Document Content: {text}\\n Questions: {questions_eo}\"},\n",
+    "            {\"role\": \"user\", \"content\": f\"Document Content: {text}\\n Questions: {questions}\"},\n",
     "        ]\n",
     "        # get answers from gpt\n",
     "        response = client.chat.completions.create(\n",
@@ -431,7 +431,7 @@
     "        \n",
     "        messages=[\n",
     "                {\"role\": \"system\", \"content\": prompt},\n",
-    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions_ex}\"},\n",
+    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions}\"},\n",
     "            ]\n",
     "        #get answers from gpt\n",
     "        response=client.chat.completions.create(\n",
@@ -595,7 +595,7 @@
     "        '''\n",
     "        messages=[\n",
     "                {\"role\": \"system\", \"content\": prompt},\n",
-    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions_gm}\"},\n",
+    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions}\"},\n",
     "            ]\n",
     "        #get answers from gpt\n",
     "        response=client.chat.completions.create(\n",
@@ -940,7 +940,7 @@
     "    # Send the message to the LLM model to process the question and return the response\n",
     "    messages = [\n",
     "        {\"role\": \"system\", \"content\": prompt},\n",
-    "        {\"role\": \"user\", \"content\": f' Reference text: {extracted_text} Questions need answers: {questions_la_1} '}\n",
+    "        {\"role\": \"user\", \"content\": f' Reference text: {extracted_text} Questions need answers: {questions} '}\n",
     "    ]\n",
     "\n",
     "    # Get answers from GPT\n",
@@ -1165,7 +1165,7 @@
     "        '''\n",
     "        messages=[\n",
     "                {\"role\": \"system\", \"content\": prompt},\n",
-    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions_la_2}\"},\n",
+    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions}\"},\n",
     "            ]\n",
     "        #get answers from gpt\n",
     "        response=client.chat.completions.create(\n",
@@ -1351,7 +1351,7 @@
     "\n",
     "        messages=[\n",
     "                {\"role\": \"system\", \"content\": prompt},\n",
-    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions_rt}\"},\n",
+    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions}\"},\n",
     "            ]\n",
     "        #get answers from gpt\n",
     "        response=client.chat.completions.create(\n",
@@ -1524,7 +1524,7 @@
     "\n",
     "        messages=[\n",
     "                {\"role\": \"system\", \"content\": prompt},\n",
-    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions_lr}\"},\n",
+    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions}\"},\n",
     "            ]\n",
     "        #get answers from gpt\n",
     "        response=client.chat.completions.create(\n",
@@ -1701,7 +1701,7 @@
     "\n",
     "        messages=[\n",
     "                {\"role\": \"system\", \"content\": prompt},\n",
-    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions_cb1}\"},\n",
+    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions}\"},\n",
     "            ]\n",
     "        #get answers from gpt\n",
     "        response=client.chat.completions.create(\n",
@@ -1871,7 +1871,7 @@
     "\n",
     "        messages=[\n",
     "                {\"role\": \"system\", \"content\": prompt},\n",
-    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions_cb2}\"},\n",
+    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions}\"},\n",
     "            ]\n",
     "        #get answers from gpt\n",
     "        response=client.chat.completions.create(\n",
@@ -2047,7 +2047,7 @@
     "\n",
     "        messages=[\n",
     "                {\"role\": \"system\", \"content\": prompt},\n",
-    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions_ds}\"},\n",
+    "                {\"role\": \"user\", \"content\": f\"Document Content: {extracted_text}\\n Question about the document: {questions}\"},\n",
     "            ]\n",
     "        #get answers from gpt\n",
     "        response=client.chat.completions.create(\n",
